--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
 δημιουργία του περιβάλλοντος GIS για την αξιοποίηση και επεξεργασία των πιο πάνω
 στοιχείων. Μοντέλο διαχείρισης υδατικών πόρων.
 <h1>ΠΕΡΙΒΑΛΛΟΝΤΙΚΕΣ:</h1>
-Συμμετοχή στην αξιολόγηση στοιχείων και στην σύνταξη περιβαλλοντικών μελέτων σε θέματα
+Συμμετοχή στην αξιολόγηση στοιχείων και στην σύνταξη περιβαλλοντικών μελετών σε θέματα
 που αφορούν κυρίως γεωμορφολογικά, τοπιολογικά, γεωλογικά, εδαφολογικά,
 μετεωρολογικά/κλιματολογικά, υδρολογικά στοίχεια. Σύνταξη περιβαλλοντικών χάρτων με
 στοιχεία από Natura 2000, Corine LC, Προστατευόμενες περιοχές (ΚΑΖ, Αισθητικά Δάση
 Αρχαιολολογικοί χώροι κλπ) σε περιβάλλον GIS. Επίσης συμμετοχή στην μελέτη εργοταξικού,
 οδικού και αεροπορικού θορύβου και μεταφοράς αέριων ρύπων μέσω υπολογιστικών μοντέλων.
 <h1>ΑΔΕΙΟΔΟΤΗΣΗ ΥΔΡΟΓΕΩΤΡΗΣΕΩΝ</h1>
-Κατάθεση πλήθους φακέλων για την έκδοση των αδειών χρήσης νερού ή/και εκτέλεσης έργων
+Κατάθεση πολλών φακέλων για την έκδοση των αδειών χρήσης νερού ή/και εκτέλεσης έργων
 αξιοποίησης υδατικών πόρων.
 Ανάληψη της διαδικασίας για την συλλογή των απαιτούμενων δικαιολογητικών που
 προβλέπονται από τη νομοθεσία, σύνταξη της σχετικής αίτησης, σύνταξη της γεωλογικής
@@ -81,7 +81,7 @@
         <h2>Στοιχεία Επικοινωνίας</h2>
         <p>Email: <a href="mailto:i.moulatsiotis@gmail.com">i.moulatsiotis@gmail.com</a></p>
         <p>Phone: <a href="tel:+306944696008">(+30) 6944696008</a></p>
-		<p>Facebook: <a href="https://www.facebook.com/yiannis.moulatsiotis" target="_blank">Επικοινωνίστε μαζί μου μέσω facebook </a></p>
+		<p>Facebook: <a href="https://www.facebook.com/yiannis.moulatsiotis" target="_blank">Επικοινωνήστε μαζί μου μέσω facebook </a></p>
         <!-- Add any additional contact details you want to provide -->
     </section>
 
